# asset-browser

./: .gitignore  README.md  launch.py  main.py  pyproject.toml
backend/: DataController.py  asset_service.py  assets.db  main.py  sync_service.py
backend/app/api/: routes.py  schemas.py
backend/app/data_access/: database.py  models.py
core/: Presenter.py  application_adapter.py  presenter.py  utils.py
core/Adapters/: HoudiniAdapter.py  MayaAdapter.py
core/adapters/: blender_adapter.py
frontend/: Browser.py  Detail.py  DetailsPage.py  FileIconWidget.py  IconGrid.py  MainWindow.py  MiniDetail.py  Preview.py  Toolbar.py  Tree.py  Window.py  browser.py  detail.py  gui.py  log_viewer.py  main_window.py  preview.py  status_bar.py  toolbar.py  window.py
src/uab/: __main__.py  main.py  runner.py
src/uab/backend/: asset_service.py  server.py  sync_service.py
src/uab/backend/app/api/: routes.py  schemas.py
src/uab/backend/app/data_access/: database.py  models.py
src/uab/backend/meta/: meta_template.yaml
src/uab/core/: base_presenter.py  desktop_presenter.py  houdini_presenter.py  presenter.py
src/uab/frontend/: browser.py  detail.py  log_viewer.py  main_widget.py  main_window.py  mini_detail.py  preview.py  thumbnail.py  toolbar.py
